--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -64,6 +64,16 @@
                 </Menu>
             </menus>
         </MenuBar>
-        <TextArea fx:id="textArea" layoutX="-1.0" layoutY="27.0" prefHeight="578.0" prefWidth="758.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="27.0" />
+        <TextArea fx:id="textArea" layoutX="-1.0" layoutY="68.0" prefHeight="537.0" prefWidth="765.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="68.0" />
+      <ToolBar layoutY="27.0" prefHeight="40.0" prefWidth="765.0">
+        <items>
+            <Button mnemonicParsing="false" text="Copiar " onAction="#copy" />
+            <Button mnemonicParsing="false" text="Enganchar" onAction="#paste" />
+            <Button mnemonicParsing="false" text="Retallar" onAction="#cut"/>
+            <Button mnemonicParsing="false" text="Desfes" onAction="#undo"/>
+
+
+        </items>
+      </ToolBar>
     </children>
 </AnchorPane>
