--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <children>
         <MenuBar prefHeight="605.0" prefWidth="758.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -67,10 +69,55 @@
         <TextArea fx:id="textArea" layoutX="-1.0" layoutY="68.0" prefHeight="537.0" prefWidth="765.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="68.0" />
       <ToolBar layoutY="27.0" prefHeight="40.0" prefWidth="765.0">
         <items>
-            <Button mnemonicParsing="false" text="Copiar " onAction="#copy" />
-            <Button mnemonicParsing="false" text="Enganchar" onAction="#paste" />
-            <Button mnemonicParsing="false" text="Retallar" onAction="#cut"/>
-            <Button mnemonicParsing="false" text="Desfes" onAction="#undo"/>
+            <Button mnemonicParsing="false" onAction="#save" >
+                <graphic>
+                    <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="save.gif" />
+                        </image>
+                    </ImageView>
+                </graphic>
+            </Button>
+
+            <Button mnemonicParsing="false" onAction="#copy" >
+                <graphic>
+                    <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="copiar.png" />
+                        </image>
+                    </ImageView>
+                </graphic>
+            </Button>
+
+            <Button mnemonicParsing="false" onAction="#paste"  >
+            <graphic>
+                <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="paste.png" />
+                    </image>
+                </ImageView>
+            </graphic>
+        </Button>
+            <Button mnemonicParsing="false" onAction="#cut" >
+                <graphic>
+                    <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="cut.png" />
+                        </image>
+                    </ImageView>
+                </graphic>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#undo" >
+                <graphic>
+                    <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="undo.png" />
+                        </image>
+                    </ImageView>
+                </graphic>
+            </Button>
+
+
 
 
         </items>
